--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
+HOST=http://localhost
 PORT=9091
 NODE_ENV=development
 
 DB_HOST=127.0.0.1
 DB_PORT=27017
-DB_NAME=webStories
+DB_NAME=lykafe
 
-JWT_SECRET=https://www.grc.com/passwords.htm
+JWT_SECRET=zQ<i'Y4FxIhO=36sA?uK[C!7bdzhnbK"*tPrMvXR>x?.BL=HtK!kYYQ:A\C-acz
