handle socket post

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "querymen": "^2.1.4",
+    "socket.io": "^4.0.0",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
   }
