--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ DB_HOST=127.0.0.1
 DB_PORT=27017
 DB_NAME=lykafe
 
-JWT_SECRET=zQ<i'Y4FxIhO=36sA?uK[C!7bdzhnbK"*tPrMvXR>x?.BL=HtK!kYYQ:A\C-acz
+JWT_SECRET=https://www.grc.com/passwords.htm
